[package]
name = "distributed-job-queue"
version = "0.0.1"
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.5.42", features = ["derive"] }
futures = "0.3.31"
num_cpus = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
unicode-segmentation = "1.12.0"
